err/webutils.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/webutils'...
Compiling './lib/python3.5/site-packages/webutils/aweber_hit.py'...
***   File "./lib/python3.5/site-packages/webutils/aweber_hit.py", line 56
    print response.status, response.reason
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/webutils/aws'...
Compiling './lib/python3.5/site-packages/webutils/aws/s3proc.py'...
***   File "./lib/python3.5/site-packages/webutils/aws/s3proc.py", line 95
    except boto.exception.S3ResponseError, err:
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webutils/aws/sqsproc.py'...
***   File "./lib/python3.5/site-packages/webutils/aws/sqsproc.py", line 77
    except boto.exception.SQSError, err:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/webutils/baseacct'...
Listing './lib/python3.5/site-packages/webutils/baseacct/templates'...
Listing './lib/python3.5/site-packages/webutils/baseacct/templates/baseacct'...
Listing './lib/python3.5/site-packages/webutils/cleanup'...
Compiling './lib/python3.5/site-packages/webutils/cleanup/__init__.py'...
***   File "./lib/python3.5/site-packages/webutils/cleanup/__init__.py", line 58
    print 'File %s older than %i days' % \
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/webutils/clickbank'...
Listing './lib/python3.5/site-packages/webutils/cryptproc'...
Compiling './lib/python3.5/site-packages/webutils/cryptproc/pyDes.py'...
***   File "./lib/python3.5/site-packages/webutils/cryptproc/pyDes.py", line 658
    print "Example of triple DES encryption in default ECB mode (DES-EDE3)\n"
                                                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/webutils/datastore'...
Listing './lib/python3.5/site-packages/webutils/djtools'...
Compiling './lib/python3.5/site-packages/webutils/djtools/helpers.py'...
***   File "./lib/python3.5/site-packages/webutils/djtools/helpers.py", line 27
    except ImportError, err:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/webutils/djtools/templates'...
Listing './lib/python3.5/site-packages/webutils/djtools/templates/djtools'...
Listing './lib/python3.5/site-packages/webutils/djtools/templatetags'...
Listing './lib/python3.5/site-packages/webutils/restlib'...
Compiling './lib/python3.5/site-packages/webutils/restlib/deprecated.py'...
***   File "./lib/python3.5/site-packages/webutils/restlib/deprecated.py", line 54
    print 'DEBUG: ', params
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/webutils/restlib/restlib.py'...
***   File "./lib/python3.5/site-packages/webutils/restlib/restlib.py", line 62
    print 'DEBUG (method): ', method
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webutils/xmlparser.py'...
***   File "./lib/python3.5/site-packages/webutils/xmlparser.py", line 75
    except SyntaxError, err:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/webutils-0.9.11.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
